[project]
name = "video2x"
description = "A video/image upscaling and frame interpolation framework"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
keywords = [
  "super-resolution",
  "upscaling",
  "neural-network",
  "machine-learning",
]
authors = [{ name = "K4YT3X", email = "i@k4yt3x.com" }]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "loguru>=0.6.0",
    "pillow>=9.1.0",
    "pynput>=1.7.6",
    "rich>=12.0.0",
    "numpy>=1.26.4",
]
dynamic = ["version"]

[project.optional-dependencies]
all = [
  "waifu2x-ncnn-vulkan-python>=1.0.4",
  "srmd-ncnn-vulkan-python>=1.0.2",
  "realsr-ncnn-vulkan-python>=1.0.6",
  "rife-ncnn-vulkan-python>=1.2.1",
  "realcugan-ncnn-vulkan-python>=1.0.2",
  "anime4k-python>=1.1.3",
  "realesrgan-ncnn-py>=2.0.0",
]
waifu2x = ["waifu2x-ncnn-vulkan-python>=1.0.4"]
srmd = ["srmd-ncnn-vulkan-python>=1.0.2"]
realsr = ["realsr-ncnn-vulkan-python>=1.0.6"]
rife = ["rife-ncnn-vulkan-python>=1.2.1"]
realcugan = ["realcugan-ncnn-vulkan-python>=1.0.2"]
anime4k = ["anime4k-python>=1.1.3"]
realesrgan = ["realesrgan-ncnn-py>=2.0.0"]

[project.urls]
homepage = "https://github.com/k4yt3x/video2x/"
documentation = "https://github.com/k4yt3x/video2x/wiki"
repository = "https://github.com/k4yt3x/video2x.git"
changelog = "https://github.com/k4yt3x/video2x/releases"

[project.scripts]
video2x = "video2x:main"

[tool.isort]
profile = "black"

[tool.pdm]
version = { source = "file", path = "video2x/__init__.py" }

[tool.pdm.dev-dependencies]
lint = [
  "flake8>=6.1.0",
  "flake8-black>=0.3.6",
  "flake8-isort>=6.0.0",
  "pylint>=2.17.5",
  "pylint-venv>=3.0.2",
]
format = ["black>=23.7.0", "isort>=5.12.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
