# Name: Video2X PyPI setup file
# Creator: K4YT3X
# Date Created: June 17, 2021
# Last Modified: July 5, 2021

# build & publish commands
# pip3 install --user -U setuptools wheel twine build
# python3 -m build -nx .
# python3 -m twine upload --repository pypi dist/*

[metadata]
name = video2x
version = 5.0.0-beta
author = K4YT3X
author_email = k4yt3x@k4yt3x.com
license = GNU General Public License v3.0
description = A lossless video/GIF/image upscaler
url = https://github.com/k4yt3x/video2x
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Multimedia :: Video
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires = ffmpeg-python; loguru; opencv-python; pillow; rich; tqdm
python_requires = >=3.6

[options.entry_points]
console_scripts = video2x = video2x:main
