# Name: Video2X PyPI setup file
# Creator: K4YT3X
# Date Created: June 17, 2021
# Last Modified: February 4, 2022

# build & publish commands
# pip install --user -U setuptools wheel twine build
# python -m build .
# twine upload --repository pypi dist/*

[metadata]
name = video2x
version = 5.0.0-beta1
author = K4YT3X
author_email = i@k4yt3x.com
license = GNU General Public License v3.0
description = A lossless video/GIF/image upscaler
url = https://github.com/k4yt3x/video2x
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Topic :: Multimedia :: Video
    Environment :: Console
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    ffmpeg-python
    loguru
    opencv-python
    pillow
    rich
    tqdm
    realsr-ncnn-vulkan-python
    rife-ncnn-vulkan-python
    srmd-ncnn-vulkan-python
    waifu2x-ncnn-vulkan-python
python_requires = >=3.6

[options.entry_points]
console_scripts = video2x = video2x:main
