# Name: Video2X PyPI setup file
# Creator: K4YT3X
# Date Created: June 17, 2021
# Last Modified: February 12, 2022

# build & publish commands
# pip install --user -U setuptools wheel twine build
# python -m build .
# twine upload --repository pypi dist/*

[metadata]
name = video2x
version = attr: video2x.__version__
author = K4YT3X
author_email = i@k4yt3x.com
license = GNU Affero General Public License v3.0
description = A video/GIF/image upscaler and frame interpolator
url = https://github.com/k4yt3x/video2x
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia :: Video
    Topic :: Scientific/Engineering :: Image Processing

[options]
packages = find:
install_requires =
    ffmpeg-python
    loguru
    opencv-python
    pillow
    rich
    realsr-ncnn-vulkan-python
    rife-ncnn-vulkan-python
    srmd-ncnn-vulkan-python
    waifu2x-ncnn-vulkan-python
python_requires = >=3.6

[options.entry_points]
console_scripts = video2x = video2x:main
